[package]
name = "algebraic_signature"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe", rev = "4ea6540322cee6d1f03a63284e5227ccfba6aea9", package = "algebra", features = [ "bls12_381" ] }
algebra-core = { git = "https://github.com/scipr-lab/zexe",  rev = "4ea6540322cee6d1f03a63284e5227ccfba6aea9", package = "algebra-core", features = [ "derive" ] }
bench-utils = { git = "https://github.com/scipr-lab/zexe",  rev = "4ea6540322cee6d1f03a63284e5227ccfba6aea9", package = "bench-utils" }
ff-fft = { git = "https://github.com/scipr-lab/zexe",  rev = "4ea6540322cee6d1f03a63284e5227ccfba6aea9", package = "ff-fft" }
thiserror = "1.0.19"
rand = "0.7.3"
rand_chacha = { version = "0.2.1" }
once_cell = "1.4.0"
blake2s_simd = "0.5.10"

[lib]
bench = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "signing"
harness = false

[[bench]]
name = "dkg"
harness = false
required-features = [ "dkg-bench" ]

[[bench]]
name = "bls"
harness = false

[features]
asm = [ "algebra/asm" ]
dkg-bench = []
huge-dkg-bench = []
print-trace = [ "bench-utils/print-trace" ]

[[bench]]
name = "huge_dkg"
harness = false
required-features = [ "huge-dkg-bench" ]
