[package]
name = "aggregatable-dkg"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
ark-ff = { version = "^0.2.0", features = [ "std" ] }
ark-ec = { version = "^0.2.0", features = [ "std" ] }
ark-poly = { version = "^0.2.0", features = [ "std" ] }
ark-serialize = { version = "^0.2.0", features = [ "std" ] }
ark-std = { version = "^0.2.0", features = [ "std" ] }
ark-bls12-381 = { version = "^0.2.0", features = [ "std" ] }
thiserror = "1.0.19"
rand = "0.7.3"
rand_chacha = { version = "0.2.1" }
once_cell = "^1.7"
blake2s_simd = "0.5.10"

[lib]
bench = false

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "signing"
harness = false

[[bench]]
name = "dkg"
harness = false
required-features = [ "dkg-bench" ]

[[bench]]
name = "bls"
harness = false

[features]
asm = [ "ark-ff/asm" ]
dkg-bench = []
huge-dkg-bench = []
print-trace = [ "ark-std/print-trace" ]

[[bench]]
name = "huge_dkg"
harness = false
required-features = [ "huge-dkg-bench" ]
